Negative number input gives syntax error for velocities and accelerations #82407

Closed
opened 2020-11-04 19:12:37 +01:00 by Tamás Bánki · 6 comments

System Information
Operating system: Windows 10 Professional 20H2
Graphics card: NVIDIA RTX 2070 Super

Blender Version
Broken: example: 2.90.1, 3e85bb34d0, master, 2020-09-23 06:43 (Steam version)
Caused by 45dbc38a8b

Short description of error
In hair velocity settings when I like to change a negative number or a number to negative without deleting the unit I get an error like this:

('invalid syntax', ('', 1, 10, '(-(0.025 m)/s)*1'))

The error only occours when I like to change just the value.

Traceback

Traceback (most recent call last):
  File "C:\Program Files (x86)\Steam\steamapps\common\Blender\2.90\scripts\modules\bpy\utils\__init__.py", line 194, in register_module_call
    register()
  File "C:\Program Files (x86)\Steam\steamapps\common\Blender\2.90\scripts\startup\MSPlugin\__init__.py", line 649, in register
    bpy.types.TOPBAR_MT_file_import.append(menu_func_import)
AttributeError: 'RNA_Types' object has no attribute 'TOPBAR_MT_file_import'
  File "<string>", line 1
    (-(0.025 m)/s)*1
             ^
SyntaxError: invalid syntax

Exact steps for others to reproduce the error

  • Use metric system.
  • Create a base mesh
  • Add a new hair particle system to the mesh with "Advanced" option is checked.
  • Go to the "Velocity" settings and change eg. the "Object Aligned X" default value from "0 m/s" to a negative number like "-0.1 m/s". (Using the "-" button or deleting the whole field and fill it is working).

Sample file
invalid syntax bug report.blend

**System Information** Operating system: Windows 10 Professional 20H2 Graphics card: NVIDIA RTX 2070 Super **Blender Version** Broken: example: 2.90.1, 3e85bb34d0d7, master, 2020-09-23 06:43 (Steam version) Caused by 45dbc38a8b **Short description of error** In hair velocity settings when I like to change a negative number or a number to negative without deleting the unit I get an error like this: > ('invalid syntax', ('<string>', 1, 10, '(-(0.025 m)/s)*1')) The error only occours when I like to change just the value. **Traceback** ``` Traceback (most recent call last): File "C:\Program Files (x86)\Steam\steamapps\common\Blender\2.90\scripts\modules\bpy\utils\__init__.py", line 194, in register_module_call register() File "C:\Program Files (x86)\Steam\steamapps\common\Blender\2.90\scripts\startup\MSPlugin\__init__.py", line 649, in register bpy.types.TOPBAR_MT_file_import.append(menu_func_import) AttributeError: 'RNA_Types' object has no attribute 'TOPBAR_MT_file_import' File "<string>", line 1 (-(0.025 m)/s)*1 ^ SyntaxError: invalid syntax ``` **Exact steps for others to reproduce the error** - Use metric system. - Create a base mesh - Add a new hair particle system to the mesh with "Advanced" option is checked. - Go to the "Velocity" settings and change eg. the "Object Aligned X" default value from "0 m/s" to a negative number like "-0.1 m/s". (Using the "-" button or deleting the whole field and fill it is working). **Sample file** [invalid syntax bug report.blend](https://archive.blender.org/developer/F9198251/invalid_syntax_bug_report.blend)
Author

Added subscriber: @tamas.banki

Added subscriber: @tamas.banki
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Confirmed, checking

Confirmed, checking
Philipp Oeser self-assigned this 2020-11-05 11:11:00 +01:00

This issue was referenced by e6739ed91d

This issue was referenced by e6739ed91d5c4f34f6fbac88734ee1ba71bc6b6f
Philipp Oeser changed title from Invalid syntax error on changing value to Negative number input gives syntax error for velocities and accelerations 2020-11-05 11:35:14 +01:00
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82407
No description provided.