source/blender/blenkernel/intern/unit.c
@@ -815,6 +815,12 @@ static char *find_next_op(const char *str, char *remaining_str, int len_max)
 
       /* Make sure we don't look backwards before the start of the string. */
       if (remaining_str != str && i != 0) {
+        /* Check for velocity or acceleration (e.g. '/' in 'ft/s' is not an op). */
+        if ((remaining_str[i] == '/') && ELEM(remaining_str[i - 1], 't', 'T', 'm', 'M') &&
+            ELEM(remaining_str[i + 1], 's', 'S')) {
+          continue;
+        }
+
         /* Check for scientific notation. */
         if (remaining_str[i - 1] == 'e' || remaining_str[i - 1] == 'E') {
           scientific_notation = true;
